--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,13 @@
   "license": "MIT",
   "type": "library",
   "require": {
-    "php": "^7.1",
-    "zendframework/zend-code": "^3.3",
+    "php": "^8.1",
     "beberlei/assert": "^3.2",
-    "ramsey/uuid": "^3.8"
+    "ramsey/uuid": "^3.8",
+    "laminas/laminas-code": "^4.5"
   },
   "require-dev": {
-    "phpunit/phpunit": "^7.0.1"
+    "phpunit/phpunit": "^9.5"
   },
   "suggest": {
     "zenbox/doctrine": "Provides Doctrine ORM pack"
